2012-08-24  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (fboundp): setq ecb-windows-width to 0.25

2012-07-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add mark-multiple.

	* init-basic.el ([f11]): Bind f11 to toggle-fullscreen.

2012-07-23  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (fci-mode): Add fill-column-indicator.el.

2012-07-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable whitespace-mode in xml.

2012-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el	(zone-programs): Fix zone.

2012-06-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-src-fontify-natively): set
	org-src-fontify-natively to t.

	* init-toolbar.el: Add electric-pair-mode menu item.

2012-05-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el ([header-line double-mouse-1]): Bind [header-line
	double-mouse-1] to create new buffer.

2012-04-29  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Remove some toolbar item like emacs-24.

	* init-basic.el: Fix dired-jump.

	* init-toolbar.el: Add linum toolbar iterm.

	* init-basic.el: Fix.

	* init-misc.el (require): Fix highlight-symbol-mode.

2012-04-26  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix.

	* init-misc.el: Disable nyan-mode default, too slow.
	Disable change-cursor-mode for performance.

	* init-basic.el: Disable global-hl-line-mode.

	* init-misc.el (require): Don't enable highlight-symbol-mode
	global, only in program modes.

	* init-basic.el: Don't enable linum-mode global, only enable in
	program modes.

2012-04-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix csharp-mode setting.

2012-04-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (fboundp): Fix ido and ffap.

2012-04-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add php-mode.

2012-01-25  Meteor Liu  <meteor1113@gmail.com>

	* Move sample to etc/

2012-01-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (ace-jump-mode): Add ace-jump-mode.