@@ -746,7 +746,43 @@ Like eclipse's Ctrl+Alt+F."
                ;;   (whitespace-mode t))
                (linum-mode 1)
                (require 'sgml-mode)
-               (set-syntax-table sgml-mode-syntax-table))))
+               (set-syntax-table sgml-mode-syntax-table)))
+  (defun format-xml ()
+    "Format XML markup in region.
+The function inserts linebreaks to separate tags that have
+nothing but whitespace between them. It then indents the markup
+by using nxml's indentation rules."
+    (interactive)
+    (let ((start (point-min))
+          (end (point-max)))
+      (if (and (fboundp 'region-active-p) (region-active-p))
+          (progn (setq start (region-beginning))
+                 (setq end (region-end)))
+        (progn (when (fboundp 'whitespace-cleanup)
+                 (whitespace-cleanup))
+               (setq end (point-max))))
+      (save-excursion
+        (save-restriction
+          (narrow-to-region (point-min) end)
+          (push-mark (point))
+          (push-mark (point-max) nil t)
+          (goto-char start)
+          ;; split <foo><foo> or </foo><foo>, but not <foo></foo>
+          (while (search-forward-regexp ">[ \t]*<[^/]" end t)
+            (backward-char 2) (insert "\n") (incf end))
+          ;; split <foo/></foo> and </foo></foo>
+          (goto-char start)
+          (while (search-forward-regexp "<.*?/.*?>[ \t]*<" end t)
+            (backward-char) (insert "\n") (incf end))
+          (when (fboundp 'whitespace-cleanup)
+            (goto-char start)
+            (whitespace-cleanup))
+          (indent-region start (point-max) nil)))))
+  (eval-after-load "nxml-mode"
+    `(progn
+       (define-key nxml-mode-map [M-f8] 'format-xml)
+       (define-key nxml-mode-map (kbd "ESC <f8>") 'format-xml) ; putty
+       (define-key nxml-mode-map (kbd "C-S-f") 'format-xml))))
 
 (defadvice artist-coord-win-to-buf (before tabbar-mode activate compile)
   "Hack artist-mode's wrong position when tabbar-mode."
